# Gravity-Simulator

./: .gitignore  404.html  CMakeLists.txt  FindFFTW3.cmake  LICENSE  MANIFEST.in  README.md  TODO.md  __main__.py  asteroid_belt_animation.py  astroid_belt_animation.py  camera.py  grav_obj.py  gravity_sim.py  index.html  kirkwood_gap.py  menu.py  mkdocs.yml  objects.inv  program_functions.py  pyproject.toml  requirements.txt  settings.py  setup.py  simulator.py  stats.py  text_box.py  textbox.py  tutorial.ipynb
.github/workflows/: ci.yml  publish.yml
12_steps_to_n_body_simulation/: index.html
Plotting/: __main__.py
docs/: API.md  CLI.md  compensated_sum.md  data_sources.md  grav_sim.bib  index.html  index.md  references.md
docs/API/: index.html
docs/data_sources/: index.html
docs/documentations/: api.md  barnes_hut.md  index.html  reducing_round_off_error.md
docs/documentations/CAPI/grav_sim/: index.html
docs/documentations/PythonAPI/: parameters.md
docs/documentations/PythonAPI/GravitySimulatorAPI/: index.html
docs/documentations/PythonAPI/parameters/: index.html
docs/documentations/barnes_hut/: index.html
docs/documentations/particle_mesh/: index.html
docs/documentations/reducing_round_off_error/: index.html
docs/getting_started/: index.html  index.md  installation_in_c.md  installation_in_python.md
docs/getting_started/installation_in_c/: index.html
docs/getting_started/installation_in_python/: index.html
docs/references/: index.html
examples/: asteroid_belt.gif.REMOVED.git-id  asteroid_belt_added_star_1.gif.REMOVED.git-id  asteroid_belt_added_star_2.gif.REMOVED.git-id  asteroid_belt_animation.py  astroid_belt.gif.REMOVED.git-id  astroid_belt_added_star.gif.REMOVED.git-id  galaxy_collision.py  galaxy_collision_init_conditions.npz.REMOVED.git-id  index.html  kirkwood_gap.py  pyth-3-body_ias15.gif.REMOVED.git-id  pyth-3-body_ias15_fix_dt.gif.REMOVED.git-id  pyth-3-body_rk4.gif.REMOVED.git-id  solar_3d.gif.REMOVED.git-id  solar_plus_3d.gif.REMOVED.git-id  solar_system_one_mil_yrs.ipynb  solar_system_one_mil_yrs.ipynb.REMOVED.git-id  tutorial.ipynb
examples/asteroid_belt_animation/: asteroid_belt.py
examples/benchmark/c/: CMakeLists.txt  benchmark.c
examples/cosmic_structure/: CMakeLists.txt  cosmic_structure.c  ics_swift.hdf5.REMOVED.git-id  music.conf
examples/cosmic_structure/c/: CMakeLists.txt  cosmic_structure.c
examples/galaxy_collision/: galaxy_collision_IC.hdf5  galaxy_collision_IC.hdf5.REMOVED.git-id
examples/galaxy_collision/c/: CMakeLists.txt  galaxy_collision.c
examples/galaxy_collision/python/: galaxy_collision.py
examples/kirkwood_gaps/: animate_kirkwood_gaps.py
examples/kirkwood_gaps/c/: CMakeLists.txt  kirkwood_gaps.c
examples/kirkwood_gaps/python/: kirkwood_gap.py
examples/media/: galaxy_collision.png.REMOVED.git-id
examples/solar_system_one_mil_yrs/: index.html  solar_system_one_mil_yrs.ipynb
examples/tutorial/: index.html  tutorial.ipynb
grav_sim/: __init__.py  __main__.py  api.py  gravitational_system.py  parameters.py  plotting.py  simulator.py  system.py  utils.py
gravity_plot/: __main__.py  c_lib.dylib  common.py  compare.py  integrator_fixed_step_size.py  integrator_ias15.py  integrator_rk_embedded.py  integrator_simple.py  plotter.py  progress_bar.py  simulator.py
gravity_plot/examples/: Solar_plus.png.REMOVED.git-id  Solar_system_10000yr_IAS15_1e-9.pdf.REMOVED.git-id  Solar_system_10000yr_IAS15_1e-9.png.REMOVED.git-id  pyth-3-body.png.REMOVED.git-id  solar_system.png.REMOVED.git-id  solar_system_rel_energy.png.REMOVED.git-id  sun_earth_moon_100y_dt_0.1d.png.REMOVED.git-id
gravity_sim/: __init__.py  __main__.py  api.py  c_lib.dylib  camera.py  cli.py  common.py  grav_obj.py  gravitational_system.py  integrator_fixed_step_size.py  integrator_ias15.py  integrator_rk_embedded.py  integrator_simple.py  integrator_whfast.py  menu.py  plotter.py  plotting.py  progress_bar.py  settings.py  simulator.py  stats.py  text_box.py  utils.py
gravity_sim/images/: neptune.png.REMOVED.git-id
images/: earth.png.REMOVED.git-id  neptune.png.REMOVED.git-id  sun.png.REMOVED.git-id
overrides/partials/: comments.html
pcg/: pcg_basic.c  pcg_basic.h
plotting/: __main__.py  simulator.py
search/: search_index.json
src/: CMakeLists.txt  Makefile  README.md  acceleration.c  acceleration.h  acceleration_PM.c  acceleration_barnes_hut.c  acceleration_barnes_hut.h  acceleration_barnes_hut_cuda.cu  acceleration_cuda.cu  acceleration_cuda.cuh  acceleration_fast_multipole.c  acceleration_fast_multipole.h  c_lib.dylib  common.c  common.h  compile_command.md  cosmology.c  cosmology.h  error.c  error.h  grav_sim.c  grav_sim.h  gravity_sim.c  gravity_sim.h  ias15.c  integrator.c  integrator.h  integrator_cosmology_leapfrog.c  integrator_ias15.c  integrator_leapfrog_cosmology.c  integrator_rk_embedded.c  integrator_simple.c  integrator_whfast.c  linear_octree.c  linear_octree.h  math_functions.c  math_functions.h  output.c  output.h  (+16 more)
src/gravity_plot/: Makefile  c_lib.c  c_lib_dll.c  common.c  common.h  ias15.c  rk_embedded.c  simple_integrators.c  tools.c  tools.h
src/gravity_sim/: Makefile  c_lib.c  common.c  common.h  ias15.c  rk_embedded.c  simple_integrators.c  tools,h  tools.c
src/pcg/: CMakeLists.txt
test/: test_camera.py  test_settings.py  test_simulator.py
test/gravity_sim/: test_camera.py  test_settings.py
test_solar/snapshots/: snapshot_00000.hdf5.REMOVED.git-id  snapshot_00001.hdf5  snapshot_00002.hdf5  snapshot_00003.hdf5  snapshot_00004.hdf5  snapshot_00005.hdf5  snapshot_00006.hdf5  snapshot_00007.hdf5  snapshot_00008.hdf5  snapshot_00009.hdf5  snapshot_00010.hdf5  snapshot_00011.hdf5  snapshot_00012.hdf5  snapshot_00013.hdf5  snapshot_00014.hdf5  snapshot_00015.hdf5  snapshot_00016.hdf5  snapshot_00017.hdf5  snapshot_00018.hdf5  snapshot_00019.hdf5
