[project]
name = "grav_sim"
version = "1.0.0"
description="Gravity Simulator"
requires-python = ">= 3.10"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "matplotlib==3.8.3",
    "numpy==1.26.4",
    "Pillow==10.3.0",
]
authors = [
    {name = "Ching-Yin Ng", email = "alvinng324@gmail.com"}
]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "black",
    "pytest",
]
