[project]
name = "grav_sim"
version = "0.0.5"
description="Gravity Simulator"
requires-python = ">= 3.9"
readme = "README.md"
license-files = ["LICENSE"]
dynamic = ["dependencies"]
authors = [
    {name = "Ching-Yin Ng", email = "alvinng324@gmail.com"}
]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[build-system]
requires = ["setuptools>=42", "wheel", "cmake>=3.10"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
]
